--- a/docs/sassy-lint.yml
+++ b/docs/sassy-lint.yml
@@ -1,5 +1,5 @@
 #########################
-## Sample Sass Lint File
+## Sample Sassy lint File
 #########################
 # Linter Options
 options:
